--- a/client/src/less/LandingPage.less
+++ b/client/src/less/LandingPage.less
@@ -1,4 +1,18 @@
-.landing-container {
-    background: color;
+.landing-container {   
+    max-width: 1000px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 5px;
+    .cards {
+        margin: 5px;
+        position: relative;
+    }:hover {
+        cursor: pointer;     
+ 
+       
+        
+    }
 }
   
