--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,13 @@
 .App {
-  text-align: center;
+display: flex;
+justify-content: center;
+
+border: 1px solid gray;
+height: 100px;
+width: 100%;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
@@ -29,4 +34,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
