--- a/client/src/css/LandingPage.css
+++ b/client/src/css/LandingPage.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  margin: 5px;
+  margin-top: 120px;
 }
 .landing-container .cards {
   margin: 5px;
