--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,3 +1,4 @@
+/* You can add global styles to this file, and also import other style files */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -105,7 +106,6 @@ section {
   display: block;
 }
 body {
-  height: 100%;
   line-height: 1;
 }
 ol,
@@ -127,14 +127,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-* {
-  box-sizing: border-box;
-  border: 0;
-  padding: 0;
-  margin: 0;
-  outline: none;
-}
-html {
-  overflow-y: scroll;
-  overflow-x: hidden;
+body {
+  background: lightgray;
 }
