--- a/client/src/less/LandingPage.less
+++ b/client/src/less/LandingPage.less
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: 5px;
+    margin-top: 120px;
     .cards {
         margin: 5px;
         position: relative;
