--- a/client/src/less/index.less
+++ b/client/src/less/index.less
@@ -1,3 +1,5 @@
+/* You can add global styles to this file, and also import other style files */
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -29,7 +31,6 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	height:100%;
 	line-height: 1;
 }
 ol, ul {
@@ -48,15 +49,7 @@ table {
 	border-spacing: 0;
 }
 
-* {
-	box-sizing: border-box;
-    border: 0;
-    padding: 0;
-	margin: 0;
-	outline: none;
-}
 
-html {
-	overflow-y: scroll;
-	overflow-x: hidden;
+body {
+    background: lightgray;
 }
