--- a/client/src/less/LandingPage.less
+++ b/client/src/less/LandingPage.less
@@ -1,11 +1,10 @@
 .landing-container {   
     max-width: 1000px;
     width: 100%;
-    display: flex;
-    align-items: center;
+    display: flex; 
     flex-wrap: wrap;
     margin-top: 120px;
-    .cards {
+    .imgs {
         margin: 5px;
         position: relative;
     }:hover {
