--- a/client/src/css/LandingPage.css
+++ b/client/src/css/LandingPage.css
@@ -2,11 +2,10 @@
   max-width: 1000px;
   width: 100%;
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   margin-top: 120px;
 }
-.landing-container .cards {
+.landing-container .imgs {
   margin: 5px;
   position: relative;
 }
