--- a/client/src/less/Modal.less
+++ b/client/src/less/Modal.less
@@ -1,12 +1,32 @@
 /* Close Button */
 
+.left-button {
+    height: 703px;
+    font-size: 2em;
+    position: absolute;
+ 
+    align-items: center;
+}
+.mother {
+    // display: flex;
+    margin-left: 399px;
+.single {
+    
+}
+.married {
+
+}
+
+}
 [class*='close-'] {
     color: white;
     font: 28px/100% arial, sans-serif;
     position: absolute;
-    right: 10px;
+    right: 40px;
     text-decoration: none;
-    top: 10px;
+    top: 20px;
+    font-size: 46px;
+    
   }
   
   [class*='close-']:hover{
@@ -40,3 +60,4 @@
       text-align: center;
       color: #dcdee0;
   }
+
