--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -10,21 +10,25 @@ body {
   font-family: helvetica;
   position: relative;
   font-size: 100%;
-  background: gray;
+  background: lightgray;
 }
 .gallery-container {
   padding: .9375rem 0;
 }
-.gallery-container h1 {
+.gallery-container .gallery-header {
   margin: 2rem 0;
   padding: 0;
   text-align: center;
   color: #fff;
   text-transform: uppercase;
-  font-size: 6.5vw;
+  font-size: 4.5vw;
   font-weight: lighter;
+  border-bottom: 10px solid #010101;
+  height: 100px;
+  box-shadow: 0px -23px 33px 0px;
+  width: 100%;
 }
-.gallery-grid {
+.gallery-container .gallery-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 8px;
@@ -32,21 +36,21 @@ body {
   width: 100%;
   margin: 0 auto;
 }
-.gallery-grid img {
+.gallery-container .gallery-grid img {
   width: 100%;
   border: 5px solid #fff;
   height: 300px;
 }
-.gallery-grid div {
+.gallery-container .gallery-grid div {
   position: relative;
   cursor: pointer;
 }
-.gallery-grid div:before,
-.gallery-grid div:after {
+.gallery-container .gallery-grid div:before,
+.gallery-container .gallery-grid div:after {
   transition: .3s opacity ease;
   opacity: 0;
 }
-.gallery-grid div:after {
+.gallery-container .gallery-grid div:after {
   content: '\02194';
   font-size: 80px;
   position: absolute;
@@ -56,7 +60,7 @@ body {
   top: 50%;
   display: block;
 }
-.gallery-grid div:before {
+.gallery-container .gallery-grid div:before {
   content: "";
   position: absolute;
   top: 0;
@@ -65,8 +69,67 @@ body {
   right: 0;
   display: block;
 }
-.gallery-grid div:hover:before,
-.gallery-grid div:hover:after {
+.gallery-container .gallery-grid div:hover:before,
+.gallery-container .gallery-grid div:hover:after {
   opacity: 1;
   transition: .3s opacity ease;
+}
+.gallery-container .modal {
+  position: fixed;
+  z-index: 999;
+  width: 50%;
+  max-width: 800px;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+}
+.gallery-container .modal img {
+  width: 100%;
+  height: 500px;
+  border: 5px solid #fff;
+}
+.gallery-container .modal-overlay {
+  position: fixed;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+}
+.gallery-container .modal-body a {
+  position: absolute;
+  display: inline;
+  color: black;
+  text-decoration: none;
+  line-height: 36px;
+  font-size: 30px;
+  font-weight: lighter;
+  background: #fff;
+  border-radius: 5px;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+}
+.gallery-container .modal-body .modal-close {
+  right: 0;
+  top: 0;
+  border-radius: 0 0 0 5px;
+}
+.gallery-container .modal-body .modal-next,
+.gallery-container .modal-body .modal-prev {
+  right: 0;
+  top: calc(50% - 25px);
+  border-radius: 5px 0 0 5px;
+  height: 50px;
+  line-height: 40px;
+  font-size: 60px;
+}
+.gallery-container .modal-body .modal-prev {
+  left: 0;
+  right: auto;
+  border-radius: 0 5px 5px 0;
+}
+.gallery-container .modal-body {
+  position: relative;
 }
