--- a/client/src/less/App.less
+++ b/client/src/less/App.less
@@ -1,4 +1,3 @@
-
 *, *:before, *:after { box-sizing: border-box; }
 
 html {
@@ -9,19 +8,23 @@ body {
   font-family: helvetica;
   position: relative;
   font-size: 100%;
-  background: gray;
+  background: lightgray;
 }
 .gallery-container {
   padding: .9375rem 0;
-}
-.gallery-container h1 {
+.gallery-header {
   margin: 2rem 0;
   padding: 0;
   text-align: center;
   color: #fff;
   text-transform: uppercase;
-  font-size: 6.5vw;
+  font-size: 4.5vw;
   font-weight: lighter;
+  border-bottom: 10px solid #010101;
+  height: 100px;
+  box-shadow: 0px -23px 33px 0px;
+  
+  width: 100%;
 }
 .gallery-grid {
   display: grid;
@@ -70,6 +73,61 @@ body {
     }
   }
 }
-
-
+.modal {
+  position: fixed;
+  z-index: 999;
+  width: 50%;
+  max-width: 800px;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);	
+  img {
+    width: 100%;
+    height: 500px;
+    border: 5px solid #fff;
+  }
+}
+.modal-overlay {
+  position: fixed;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+}
+.modal-body a {
+  position: absolute;
+  display: inline;
+  color: black;
+  text-decoration: none;
+  line-height: 36px;
+  font-size: 30px;
+  font-weight: lighter;
+  background: #fff;
+  border-radius: 5px;
+  height: 40px; width: 40px;
+  text-align: center;
+}
+.modal-body .modal-close {
+  right: 0; top: 0;
+  border-radius: 0 0 0 5px;
+}
+.modal-body .modal-next,
+.modal-body .modal-prev {
+  right: 0; top: calc(50% - 25px);
+  border-radius: 5px 0 0 5px;
+  height: 50px;
+  line-height: 40px;
+  font-size: 60px;
+}
+.modal-body .modal-prev {
+  left: 0;
+  right: auto;
+  border-radius: 0 5px 5px 0;
+}
+.modal-body {
+  position: relative;
+ }
+}
 
