--- a/client/src/less/App.less
+++ b/client/src/less/App.less
@@ -66,11 +66,8 @@ body {
     right: 0;
     display: block;
   }
-  &:hover {
-    &:before, &:after {
-      opacity: 1;
-      transition: .3s opacity ease;
-    }
+  &:hover {  
+     background: gray;   
   }
 }
 .modal {
